--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,22 @@
 }
 
 .product .product-top img {
-  max-width: 100%;
+  width: 100%;
 }
 
+
+.product .img-hover{
+  width: 100%;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+}
+
+.product:hover .img-hover{
+  display: block;
+}
 
 
 .product-top .discount{
